Follow Bootstrap v4.2.1 (Provisional)
https://github.com/twbs/bootstrap/issues/27903

--- a/app/views/lab/ilike/list.scala.html
+++ b/app/views/lab/ilike/list.scala.html
@@ -57,21 +57,21 @@
 								@components.icon(Map("icon"->"fas fa-square"))
 								Cras justo odio
 								<div class="float-right">
-									@components.forms.customswitch(Map("id"->"", "name"->"default", "class"->"mb-0"))
+									@components.forms.customswitch(Map("id"->"switch0", "name"->"default", "class"->"mb-0"))
 								</div>
 							</a>
 							<a href="#" class="list-group-item list-group-item-action">
 								@components.icon(Map("icon"->"fas fa-square"))
 								Dapibus ac facilisis in
 								<div class="float-right">
-									@components.forms.customswitch(Map("id"->"", "name"->"unchecked", "class"->"mb-0", "selected"->"false"))
+									@components.forms.customswitch(Map("id"->"switch1", "name"->"unchecked", "class"->"mb-0", "selected"->"false"))
 								</div>
 							</a>
 							<a href="#" class="list-group-item list-group-item-action">
 								@components.icon(Map("icon"->"fas fa-square"))
 								Morbi leo risus
 								<div class="float-right">
-									@components.forms.customswitch(Map("id"->"", "name"->"checked", "class"->"mb-0", "selected"->"true"))
+									@components.forms.customswitch(Map("id"->"switch2", "name"->"checked", "class"->"mb-0", "selected"->"true"))
 								</div>
 							</a>
 						</div>
