--- a/app/views/libraries/popper/last.scala.html
+++ b/app/views/libraries/popper/last.scala.html
@@ -5,4 +5,4 @@
 
 @()(implicit request:Http.Request, lang: Lang, messages: Messages)
 
-<script @{CSPNonce.attr} type='text/javascript' src='@routes.Assets.versioned("lib/bootstrap/assets/js/vendor/popper.min.js")'></script>
+<script @{CSPNonce.attr} type='text/javascript' src='@routes.Assets.versioned("lib/popper.js/dist/umd/popper.min.js")'></script>
