--- a/app/views/body.scala.html
+++ b/app/views/body.scala.html
@@ -102,7 +102,8 @@
 					Map("name"->messages(MessageKeys.WELCOME), "icon"->"ii ii-play", "link"->controllers.framework.welcome.routes.Welcome.index().toString(), "selected"->equalWork("framework","welcome")),
 					Map("name"->(messages(MessageKeys.DEFAULT)+" "+messages(MessageKeys.PAGE)), "icon"->"ef ef-note", "link"->controllers.framework.defaultpage.routes.Defaultpage.index().toString(), "selected"->equalWork("framework","defaultpage")),
 					Map("name"->messages(MessageKeys.APPLICATION), "icon"->"ef ef-musical_note if-monochrome if-inverse", "link"->controllers.framework.application.routes.Application.index("config").toString(), "selected"->equalWork("framework","application")),
-					Map("name"->messages(MessageKeys.DATETIME), "icon"->"ef ef-calendar if-monochrome", "link"->controllers.framework.datetime.routes.DateTime.index().toString(), "selected"->equalWork("framework","datetime"))
+					Map("name"->messages(MessageKeys.DATETIME), "icon"->"ef ef-calendar if-monochrome", "link"->controllers.framework.datetime.routes.DateTime.index().toString(), "selected"->equalWork("framework","datetime")),
+					Map("name"->(messages(MessageKeys.DATETIME)+"("+messages(MessageKeys.STRICT)+")"), "icon"->"ef ef-calendar if-monochrome", "link"->controllers.framework.strictdatetime.routes.DateTime.index().toString(), "selected"->equalWork("framework","strictdatetime"), "show"->"false")
 				)),
 				(Map("show"->isDev().toString(), "name"->messages(MessageKeys.BOOTSTRAP), "icon"->"ii ii-bootstrap if-monochrome if-inverse", "selected"->equalSection("bootstrap")),List(
 					Map("name"->messages(MessageKeys.COMPONENT), "icon"->"far fa-file-alt", "link"->controllers.bootstrap.component.routes.Component.index("button").toString(), "selected"->equalWork("bootstrap","component")),
