--- a/app/views/lab/ui/pay.scala.html
+++ b/app/views/lab/ui/pay.scala.html
@@ -39,7 +39,7 @@
 			<div class="row">
 				<div class="col-md-3">
 
-					@tasks(Map("id"->"", "task"->"window"))
+					@tasks(Map("id"->"", "task"->"pay"))
 				</div>
 				<div class="mt-3 d-md-none">
 				</div>
