Follow Play Framework v2.7.0

--- a/app/views/body.scala.html
+++ b/app/views/body.scala.html
@@ -132,7 +132,7 @@
 			<button id="system_content-left-corner">
 			</button>
 
-			<nav id="system_menu" class="navbar navbar-expand-xs navbar-light bg-light md-3 shadow-sm sticky-top">
+			<nav id="system_menu" class="navbar navbar-expand-xs navbar-light bg-light md-3 shadow-sm sticky-top w-100">
 
 				<div>
 					@components.button(Map("id"->"system_work-menu-button", "type"->"link", "icon"->"navbar-toggler-icon", "text"->"", "class"->"navbar-toggler", "aria-expanded"->"false", "aria-label"->"Toggle navigation"))
