--- a/app/views/lab/application/tasks.scala.html
+++ b/app/views/lab/application/tasks.scala.html
@@ -40,6 +40,7 @@
 	<a href="@controllers.lab.application.routes.Application.index("translate").toString()" class="list-group-item @("active".when(equalTask("translate"))) secret">@messages(MessageKeys.TRANSLATE)</a>
 	<a href="@controllers.lab.application.routes.Application.index("direction").toString()" class="list-group-item @("active".when(equalTask("direction"))) secret">@messages(MessageKeys.DIRECTION)</a>
 	<a href="@controllers.lab.application.routes.Application.index("vertical").toString()" class="list-group-item @("active".when(equalTask("vertical"))) secret">Vertical</a>
+	<a href="@controllers.lab.application.routes.Application.index("dark").toString()" class="list-group-item @("active".when(equalTask("dark"))) secret">Dark</a>
 
 	<a href="@controllers.lab.application.routes.Application.index("authorization").toString()" class="list-group-item @("active".when(equalTask("authorization")))">@messages(MessageKeys.AUTHORIZATION)</a>
 </div>
