--- a/app/views/body.scala.html
+++ b/app/views/body.scala.html
@@ -180,7 +180,7 @@
 				Map("id"->"reportErrorButton", "type"->"primary", "text"->messages(MessageKeys.REPORT), "default"->"true")
 			)){
 			<textarea id="reportErrorContent" class="form-control" placeholder="Content" rows="16" required maxlength="1000"></textarea>
-			<div class="wordwrap">
+			<div class="text-break">
 				<div id="reportErrorMessage" class="lead"></div>
 				<div id="reportErrorDescription">-</div>
 			</div>
