--- a/app/views/lab/application/ivd.scala.html
+++ b/app/views/lab/application/ivd.scala.html
@@ -103,7 +103,7 @@
 								<div id="variations" class="row mb-3">
 								</div>
 							}
-							<div class="wordwrap">
+							<div class="text-break">
 								<div id="ajaxMessage" class="lead"></div>
 								<div id="ajaxDescription">-</div>
 							</div>
