--- a/app/views/manage/company/organization/list/uploaddialog.scala.html
+++ b/app/views/manage/company/organization/list/uploaddialog.scala.html
@@ -62,7 +62,7 @@
 		</div>
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="uploadMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="uploadDescription">-</div>
 	</div>
