--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -109,7 +109,7 @@
 		</div>
 		}
 
-		@components.modal(Map("id"->"usersDialog", "title"->messages(MessageKeys.USER), "closable"->"true", "size"->"lg"), List(
+		@components.modal(Map("id"->"usersDialog", "title"->messages(MessageKeys.USER), "closable"->"true", "size"->"lg", "scrollable"->"true"), List(
 				Map("id"->"usersOk", "type"->"primary", "text"->messages(MessageKeys.OK), "data-dismiss"->"modal", "default"->"true")
 			)){
 
