--- a/app/views/development/design/icon.scala.html
+++ b/app/views/development/design/icon.scala.html
@@ -60,19 +60,19 @@
 				<div class="row mt-3 icon_list">
 
 					@for(fontAwesomeIconName <- fontAwesomeSolidIconNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("fas fa-" + fontAwesomeIconName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("fas fa-" + fontAwesomeIconName)</div>
 					</div>
 					}
 					@for(fontAwesomeIconName <- fontAwesomeRegularIconNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("far fa-" + fontAwesomeIconName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("far fa-" + fontAwesomeIconName)</div>
 					</div>
 					}
 					@for(fontAwesomeIconName <- fontAwesomeBrandsRegularIconNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("fab fa-" + fontAwesomeIconName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("fab fa-" + fontAwesomeIconName)</div>
 					</div>
@@ -88,7 +88,7 @@
 				<div class="row mt-3 icon_list">
 
 					@for(materialDesignIconName <- materialDesignIconNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("material-icons mi-" + materialDesignIconName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("material-icons mi-" + materialDesignIconName)</div>
 					</div>
@@ -104,7 +104,7 @@
 				<div class="row mt-3 icon_list">
 
 					@for(ioniconsName <- ioniconsNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("ion ion-" + ioniconsName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("ion ion-" + ioniconsName)</div>
 					</div>
@@ -120,7 +120,7 @@
 				<div class="row mt-3 icon_list">
 
 					@for(icoFontName <- icoFontNames) {
-					<div class="icon_container mb-3 wordwrap">
+					<div class="icon_container mb-3 text-break">
 						@components.icon(Map("id"->"", "icon"->("icofont icofont-" + icoFontName + " fa-3x"), "class"->"icon_body"))
 						<div class="icon_caption">@("icofont icofont-" + icoFontName)</div>
 					</div>
