--- a/app/views/lab/application/translate.scala.html
+++ b/app/views/lab/application/translate.scala.html
@@ -82,7 +82,7 @@
 					@components.modal(Map("id"->"ajaxDialog", "icon"->"fas fa-spinner fa-pulse", "title"->messages(MessageKeys.REQUEST), "closable"->"false", "data-backdrop"->"static"), List(
 							Map("id"->"ajaxCancel", "type"->"primary", "outline"->"true", "text"->messages(MessageKeys.CANCEL), "enabled"->"false", "data-dismiss"->"modal")
 						)){
-						<div class="wordwrap">
+						<div class="text-break">
 							<div id="ajaxMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 							<div id="ajaxDescription">-</div>
 						</div>
