--- a/app/views/manage/company/createdialog.scala.html
+++ b/app/views/manage/company/createdialog.scala.html
@@ -48,7 +48,7 @@
 		}
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="createMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="createDescription">-</div>
 	</div>
