--- a/app/views/manage/company/deletedialog.scala.html
+++ b/app/views/manage/company/deletedialog.scala.html
@@ -42,7 +42,7 @@
 		</div>
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="deleteMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="deleteDescription">-</div>
 	</div>
