--- a/app/views/manage/company/updatedialog.scala.html
+++ b/app/views/manage/company/updatedialog.scala.html
@@ -58,7 +58,7 @@
 		</div>
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="updateMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="updateDescription">-</div>
 	</div>
