--- a/app/views/manage/user/createdialog.scala.html
+++ b/app/views/manage/user/createdialog.scala.html
@@ -92,7 +92,7 @@
 		</div>
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="createMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="createDescription">-</div>
 	</div>
