--- a/app/views/setting/user/changeuser/confirmdialog.scala.html
+++ b/app/views/setting/user/changeuser/confirmdialog.scala.html
@@ -35,7 +35,7 @@
 		</div>
 	}
 
-	<div class="wordwrap">
+	<div class="text-break">
 		<div id="confirmMessage" class="lead">@messages(MessageKeys.PLEASE__WAIT)</div>
 		<div id="confirmDescription">-</div>
 	</div>
