Follow Play Framework v2.7.2

--- a/app/views/components/credit.scala.html
+++ b/app/views/components/credit.scala.html
@@ -6,5 +6,5 @@
 
 @()(implicit request:Http.Request, lang: Lang, messages: Messages)
 
-@* Can be changed. *@
+@* The display can be changed by the user. *@
 <a class="system_credit" href="@messages(MessageKeys.MYCOMPANY_LINK)">&copy; 2017-@Year.now() @messages(MessageKeys.MYCOMPANY_NAME)</a>
