--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -96,7 +96,7 @@
 
 						<div class="d-flex justify-content-between mt-3">
 							<div id="snsLinks"><a class="github-button" href="https://github.com/hiro20v/FinePlay" data-show-count="true" aria-label="Star hiro20v/FinePlay on GitHub">Star</a></div>
-							<div>@components.button(Map("id"->"shareButton", "type"->"secondary", "size"->"sm", "icon"->"fas fa-share", "text"->messages(MessageKeys.SHARE)))</div>
+							<div>@components.button(Map("id"->"shareButton", "type"->"secondary", "size"->"sm", "class"->"d-none", "icon"->"fas fa-share", "text"->messages(MessageKeys.SHARE)))</div>
 						</div>
 					}
 					</div>
@@ -253,7 +253,6 @@
 							Map("name"->"IPAmjMincho", "icon"->"fas fa-font", "link"->"http://mojikiban.ipa.go.jp/1300.html", "info"->""),
 
 							Map("name"->"geckodriver", "icon"->"fab fa-firefox", "link"->" https://github.com/mozilla/geckodriver", "info"->""),
-							Map("name"->"sbt-dependency-graph", "icon"->"fas fa-project-diagram", "link"->"https://github.com/jrudolph/sbt-dependency-graph", "info"->""),
 							Map("name"->"RTLCSS", "icon"->"fab fa-css3-alt", "link"->"https://rtlcss.com", "info"->""),
 							Map("name"->"Natural Earth", "icon"->"fas fa-globe", "link"->"http://www.naturalearthdata.com", "info"->"")
 						))
