--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -41,9 +41,7 @@ body {
 	width: 100%;
 	top: 0px;
 	bottom: 0px;
-	overflow: auto;
-	overflow-scrolling: touch;
-	-webkit-overflow-scrolling: touch;
+	overflow: scroll;
 	left: 0px;
 	right: 100%;
 	transition-property: left,right;
